fix collapse list

--- a/src/assets/sass/pages/_housing.scss
+++ b/src/assets/sass/pages/_housing.scss
@@ -16,12 +16,6 @@
         margin: 25px 0;
     }
 
-    &__list {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-    }
-
     &__rating {
         width: 50%;
         display: flex;
