--- a/src/components/Collapse/_collapse.scss
+++ b/src/components/Collapse/_collapse.scss
@@ -2,6 +2,7 @@
 
 .collapse_container {
     width: 100%;
+
     &__title {
         background-color: $primary_color;
         border-radius: 10px;
@@ -29,6 +30,15 @@
             color: $primary-color;
             font-weight: 400;
             line-height: 34px;
+        }
+
+        &--list {
+            line-height: 35px;
+            color: $primary-color;
+            font-size: 24px;
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
         }
     }
 }
